# MediAlert

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  DEPLOYMENT.md  FEATURES.md  FINAL_SETUP.md  FIREBASE_SETUP.md  FIXES_APPLIED.md  GITHUB_SETUP_SUMMARY.md  GIT_PUSH_GUIDE.md  LICENSE  PUSH_CHECKLIST.md  QUICKSTART.md  QUICK_START_PUSH.md  README.md  REPOSITORY_INFO.md  START_HERE.md  TODO.md  UPGRADE_SUMMARY.md  VISUAL_GUIDE.md  app.py  app_firebase.py  firebase_config.py  git_setup.bat  medical_reports_page.py  password_hash.py  patient_info_page.py  pyproject.toml  set_admin.py  setup_admin.py  verify_before_push.bat  web_app.py
src/systeme_urgences_medicales/: crew.py  main.py
src/systeme_urgences_medicales/config/: agents.yaml  tasks.yaml
static/css/: main.css
templates/: admin.html  alert.html  api_docs.html  dashboard.html  login.html  profile.html
