[project]
name = "systeme_urgences_medicales"
version = "0.1.0"
description = "systeme_urgences_medicales using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
systeme_urgences_medicales = "systeme_urgences_medicales.main:run"
run_crew = "systeme_urgences_medicales.main:run"
train = "systeme_urgences_medicales.main:train"
replay = "systeme_urgences_medicales.main:replay"
test = "systeme_urgences_medicales.main:test"
run_with_trigger = "systeme_urgences_medicales.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
